--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,19 @@ body{
   animation-duration:3s;
 
 }
+.profile-picture {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%; 
+  overflow: hidden; 
+}
+
+
+.rounded-profile {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
 
 @media (max-width:1540px) {
   .spacing{
@@ -40,6 +53,15 @@ body{
 @media (max-width:840px) {
   .spacing{
     letter-spacing: 3px;
+  }
+  
+}
+@media (max-width:840px) {
+  .profile-picture {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%; 
+    overflow: hidden; 
   }
   
 }
