--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,19 @@ body{
   height: 100%; 
   object-fit: cover; 
 }
+.biodata-picture {
+  height: 140px;
+  width: 140px;
+  border-radius: 50%; 
+  overflow: hidden; 
+}
+
+
+.biodata-profile {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
 
 @media (max-width:1540px) {
   .spacing{
