completed 80% of dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -114,12 +114,15 @@ body {
   background-color: #fefde5 !important;
 } */
 #dashboard .active {
-  background-color: #f06598;
+  background-color: #f43f5e;
   padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 12px;
+  width: 90%;
+  border-radius: 10px;
+  
+  padding-bottom: 12px;
   font-weight: 500;
-  border-radius: 6px 0px 0px 6px;
+ 
 }
 
 @media (max-width:1540px) {
